# rustic_net

./: .gitignore  BENCHMARKS.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: tensor_benchmarks.rs
examples/: tensor_operations.rs
prompts/: 02tensor_refactor.prompt  03tensor_refactor.prompt  tensor.prompt
src/: lib.rs  parallel.rs  tensor.rs  tracing.rs
src/tensor/: creation.rs  device.rs  dtype.rs  impl_ops.rs  math_operations.rs  mod.rs  shape.rs  shape_ops.rs  tensor.rs
src/tensor/backends/: cpu_par.rs  cpu_seq.rs  cpu_simd.rs  cpu_simd_par.rs  mod.rs  traits.rs
src/tensor/backends/utils/: mod.rs  parallel_utils.rs  simd_utils.rs
tests/: simd_tests.rs  test_parallel.rs  test_shape.rs  test_tensor.rs
