[package]
name = "rustic_net"
version = "0.1.0"
edition = "2021"
authors = ["mtb0x1 <mtb0x10x1@gmail.com>"]
license-file = "LICENSE"

[features]
default = []
parallel = ["dep:rayon", "dep:rand_chacha", "dep:lazy_static"]
simd = []
simd_and_parallel = ["dep:rayon", "dep:rand_chacha", "dep:lazy_static"]
cuda = []
webgpu = []

[dependencies]
criterion = { version = "0.7.0", features = ["html_reports"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8" # Pinned to 0.8 to match rand_chacha
approx = "0.5.1"

# Parallel processing
rayon = { version = "1.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
lazy_static = { version = "1.5.0", optional = true }


[[bench]]
name = "tensor_benchmarks"
harness = false

[[test]]
name = "test_tensor"
harness = true

[[test]]
name = "simd_tests"
path = "tests/simd_tests.rs"
harness = true
required-features = ["simd"]
