[package]
name = "rustic_net"
version = "0.1.0"
edition = "2021"
authors = ["mtb0x1 <mtb0x10x1@gmail.com>"]
license-file = "LICENSE"

[package.metadata.docs.rs]
features = ["parallel", "simd", "simd_and_parallel", "cuda", "webgpu"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
parallel = ["dep:rayon", "dep:rand_chacha", "dep:lazy_static"]
simd = []
simd_and_parallel = ["dep:rayon", "dep:rand_chacha", "dep:lazy_static"]
cuda = []
webgpu = []

[dependencies]
criterion = { version = "0.7.0", features = ["html_reports"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8" # Pinned to 0.8 to match rand_chacha
approx = "0.5.1"

# Parallel processing
rayon = { version = "1.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
lazy_static = { version = "1.5.0", optional = true }


[[test]]
name = "test_shape"
path = "tests/test_shape.rs"
harness = true

[[test]]
name = "test_tensor"
path = "tests/test_tensor.rs"
harness = true

[[test]]
name = "test_parallel"
path = "tests/test_parallel.rs"
harness = true

[[bench]]
name = "tensor_benchmarks"
harness = false


